--- a/css/cuenta.scss
+++ b/css/cuenta.scss
@@ -1,6 +1,6 @@
 @import "general.scss";
 @import "navstyle.scss";
-
+@import "modal.scss";
 .botones{
     margin: auto;
     margin-bottom: 1.5rem;
