--- a/css/modal.css
+++ b/css/modal.css
@@ -32,7 +32,7 @@
           align-items: center;
 }
 
-.modal-container .modal .btn-add, .modal-container .modal .btn-cancel {
+.modal-container .modal .btn-add, .modal-container .modal .btn-cancel, .modal-container .modal .btn-edit {
   padding: 0.5rem 1rem;
   background-color: #017201;
 }
@@ -48,6 +48,11 @@
 
 .modal-container .modal .btn-cancel:hover {
   background-color: #d80000;
+  color: white;
+}
+
+.modal-container .modal .btn-edit:hover {
+  background-color: #00c300;
   color: white;
 }
 
