--- a/css/modal.scss
+++ b/css/modal.scss
@@ -19,7 +19,7 @@
         justify-content: center;
         align-items: center;
 
-     .btn-add,.btn-cancel{
+     .btn-add,.btn-cancel, .btn-edit{
         
         padding: 0.5rem 1rem;
         background-color: #017201;
@@ -37,6 +37,11 @@
          background-color: #d80000;
          color:white;
      }
+
+     .btn-edit:hover{
+        background-color: #00c300;
+        color: white;
+    }
     }
 }
 
