--- a/css/general.scss
+++ b/css/general.scss
@@ -3,6 +3,7 @@ $yellow-green:#9a9c00;
 
 body{
     margin: auto;
+    width: 100vw;
 //     display: flex;
 //     align-items: center;
 //     justify-content: center;
