--- a/css/cuenta.scss
+++ b/css/cuenta.scss
@@ -5,20 +5,28 @@
     margin: auto;
     margin-bottom: 1.5rem;
     width: 90vw;
-    display: flex;
-    justify-content: flex-end;;
-    // align-items:;
+    display: grid;
+    grid-template-columns: 60% 20% 20%;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items:center;
+
     
     .total{
         font-size: 1.5rem;
         font-family:'Raleway', sans-serif;
         color:whitesmoke;
-        align-self: flex-end;
-}
+        align-self: end;
+        // align-self: flex-end;
+    }
 }
 
 .ingreso, .gasto{
     margin: 0 10px;
+    width: min-content;
+    text-align: center;
+    align-self: end;
+    justify-self: end;
     color: #000;
     background-color:  #017201;
     padding:10px 20px;
@@ -29,6 +37,7 @@
 
 .gasto{
     background-color: #8b0000;
+    justify-self: start;
 }
 
 .ingreso:hover{
@@ -45,20 +54,24 @@
 
     margin: auto;
     width: 90vw;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    // justify-content: space-evenly;
+    // align-items: center;
     border:1px solid whitesmoke;
+    border-radius: 5px;
 
     .titulos{
         // border-right: 1px solid whitesmoke;
         // margin-right: 150px;
+        text-align: center;
         font-size: 1.5rem;
         color:whitesmoke;
         font-family:'Raleway', sans-serif;
         
     }
 }
+
 
 .i{
     background-color: #00ad00;
@@ -69,16 +82,45 @@
 }
 
 .acciones {
-
+    text-align: center;
     .btn-editar{
-        background-color: #0000be;
+        font-size: 1.1rem;
+        text-align: center;
+        background-color: #2a2aff;
         color: whitesmoke;
         font-family:'Raleway', sans-serif;
+        border-radius: 1rem;
     }
 
     .btn-eliminar{
-        background-color: rgb(185, 0, 0);
+        font-size: 1.1rem;
+        background-color: #ff0000;
         color:whitesmoke;
         font-family:'Raleway', sans-serif;
+        border-radius: 1rem;
+    }
+
+    .btn-editar:hover, .btn-eliminar:hover{
+        color:#000;
+        background-color: #fff;
     }
 }
+@media screen and (max-width: 720px){
+   
+    .botones{    
+        .total{
+            font-size: 1rem;
+        }
+    }
+    .ingreso, .gasto{
+       
+        font-size: 0.8rem;
+        
+    }
+
+    .box-titulos{  
+        .titulos{
+            font-size: 0.8rem;    
+        }
+    }
+  }
