--- a/css/general.css
+++ b/css/general.css
@@ -1,5 +1,6 @@
 body {
   margin: auto;
+  width: 100vw;
   background-color: #1a1a1a;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
